# Learning_Tracker

./: .env.example  .gitignore  .replit  Dockerfile  config.py  firebase.json  firestore.indexes.json  firestore.rules  main.py  pyproject.toml  replit.md  seed.py  storage.rules
app/: __init__.py  decorators.py  events.py  firebase_init.py  firestore_dao.py  firestore_models.py  forms.py  models.py
app/routes/: analytics.py  attendance.py  auth.py  checkpoints.py  community.py  courses.py  forum.py  guide.py  main.py  progress.py  sessions.py  slides.py  subjects.py
app/services/: ai_checkpoint.py  slide_converter.py  storage.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html  notifications.html
app/templates/analytics/: instructor.html  student.html
app/templates/attendance/: course.html
app/templates/auth/: account_settings.html  forgot_password.html  login.html  register.html  reset_password.html
app/templates/checkpoints/: ai_generate.html  create.html  edit.html
app/templates/community/: index.html  qna_detail.html  qna_form.html  qna_list.html  review_detail.html  review_form.html  reviews_list.html  study_group_detail.html  study_group_form.html  study_groups_list.html
app/templates/courses/: create.html  edit.html  enroll.html  list.html  live_instructor.html  live_student.html  members.html  self_study_progress.html  settings.html  start_session.html  (+2 more)
attached_assets/: Pasted--Learning-Progress-Tracking-Platform-Technical-Specific_1769677758340.txt  Pasted-0-PPT--1770643814621_1770643814622.txt
(+24 files in other folders)
