[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "learning-progress-tracker"
version = "0.1.0"
description = "Learning Progress Tracker with Firebase backend"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "eventlet>=0.40.4",
    "firebase-admin>=6.2.0",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "flask-wtf>=1.2.2",
    "google-cloud-storage>=2.14.0",
    "google-genai>=1.60.0",
    "gunicorn>=24.1.1",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
]
